objects/Revenue_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Budgets</relationshipLabel>
        <relationshipName>Revenue_Budgets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Amount__c</fullName>
        <label>Services Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Budget</label>
    <nameField>
        <displayFormat>RB{00000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Date__c</columns>
        <columns>Services_Amount__c</columns>
        <columns>Subscription_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>